[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "okex"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = {version = "0.4", features = ["serde"]}
derive_builder = "0.10"
fehler = "1"
futures = "0.3"
http = "0.2"
hyper = "0.14"
lazy_static = "1"
log = "0.4"
pin-project = "1"
reqwest = {version = "0.11", features = ["json", "rustls-tls"], default-features = false}
ring = "0.16"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_qs = "0.8"
serde_urlencoded = "0.7"
strum = {version = "0.20", features = ["derive"]}
thiserror = "1"
tokio = {version = "1", features = ["time", "macros", "rt-multi-thread", "net"]}
tokio-tungstenite = {features = ["rustls-tls"], version = "0.14"}
tungstenite = {version = "0.13", features = ["rustls-tls"], default-features = false}
url = "2"
uuid = {version = "0.8", features = ["serde"]}

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.8"
